feat: update french translation

--- a/data/locale/en-US.ini
+++ b/data/locale/en-US.ini
@@ -39,7 +39,7 @@ tuna.gui.tab.lastfm.apikey="Custom API key"
 
 # deezer
 tuna.gui.tab.deezer="Deezer"
-tuna.gui.tab.deezer.info="Deezer only provides a song history meaning that the provided information wil always be one song behind."
+tuna.gui.tab.deezer.info="Deezer only provides a song history meaning that the provided information will always be one song behind."
 tuna.gui.tab.deezer.api.id="Custom API ID"
 tuna.gui.tab.deezer.api.secret="Custom API Secret"
 
