--- a/data/locale/fr-FR.ini
+++ b/data/locale/fr-FR.ini
@@ -37,6 +37,12 @@ tuna.gui.tab.lastfm="last.fm"
 tuna.gui.tab.lastfm.username="Nom d'utilisateur"
 tuna.gui.tab.lastfm.apikey="Clé d'API personnalisée"
 
+# deezer
+tuna.gui.tab.deezer="Deezer"
+tuna.gui.tab.deezer.info="Deezer fournit seulement un historique de musique, ce qui veut dire que les informations fournies auront toujours une chanson de retard."
+tuna.gui.tab.deezer.api.id="Identifiant API personnalisée"
+tuna.gui.tab.deezer.api.secret="Secret API personnalisée"
+
 # Spotify tab
 tuna.gui.tab.spotify.info="Récupère la musique en cours de lecture directement depuis l'API de Spotify. Pour l'activer, vous devrez vous identifier à Spotify à l'aide du lien ci-dessous. Après avoir autorisé l'accès, vous obtiendrez un code d'authentification à copier dans la case en dessous.\nGardez à l'esprit que certaines interactions avec l'API, telles que mettre en pause, sont réservées aux utilisateurs Spotify premium."
 tuna.gui.tab.spotify.login="Ouvrir la page d'identification"
@@ -129,3 +135,4 @@ tuna.gui.tab.basics.stop="Arrêter"
 tuna.gui.tab.basics.notrunning="Prévisualisation : Tuna n'est pas démarré"
 tuna.gui.tab.basics.preview="Prévisualisation : "
 tuna.gui.tab.basics.host.server="Héberger / Recevoir les informations sur un serveur local avec le port : "
+tuna.gui.tab.basics.removeextensions="Suprimmer l'extension de fichier du titre"
