--- a/data/locale/es-ES.ini
+++ b/data/locale/es-ES.ini
@@ -9,6 +9,7 @@ tuna.gui.tab.mpd="MPD"
 tuna.gui.tab.window_title="Título de la ventana"
 tuna.gui.tab.about="Acerca de"
 tuna.gui.tab.gpmdp="Google Play Music Desktop Player"
+tuna.gui.tab.web="Navegador"
 
 # Source
 tuna.source.progress.color.fg="Color en primer plano"
@@ -127,3 +128,5 @@ tuna.gui.tab.basics.start="Iniciar"
 tuna.gui.tab.basics.stop="Detener"
 tuna.gui.tab.basics.notrunning="Vista previa: El plugin no se está ejecutando"
 tuna.gui.tab.basics.preview="Vista previa: "
+tuna.gui.tab.basics.host.server="Alojar/recibir información en el servidor web local con puerto: "
+tuna.gui.tab.basics.removeextensions="Eliminar extensiones de archivo del título"
