Added source drop down to dock
Closes #119

--- a/data/locale/en-US.ini
+++ b/data/locale/en-US.ini
@@ -26,6 +26,7 @@ tuna.dock.label.song="Song: "
 tuna.dock.menu.title="Music control context"
 tuna.dock.menu.toggle.volume="Toggle volume controls"
 tuna.dock.menu.toggle.info="Toggle song info"
+tuna.dock.menu.toggle.source="Toggle source selection"
 
 # Misc
 tuna.gui.select.song.file="Select destination for song file"
