VLC Source: Basic per scene mapping

--- a/data/locale/en-US.ini
+++ b/data/locale/en-US.ini
@@ -60,8 +60,12 @@ tuna.gui.tab.vlc="VLC"
 tuna.gui.vlc.refresh="Refresh"
 tuna.gui.vlc.source.name="VLC source name"
 tuna.gui.issue.title="Tuna plugin"
-tuna.gui.vlc.issue.message="OBS seems to have updated, which means that Tuna's VLC source support could potentially crash until Tuna is updated. Do you still want to leave it enabled?"
 tuna.gui.vlc.none="None"
+tuna.gui.vlc.source="Source"
+tuna.gui.vlc.scene="Scene"
+tuna.gui.vlc.remove.source="Remove selected source"
+tuna.gui.vlc.add="Add"
+tuna.gui.vlc.invalid="Source or scene are no longer valid!"
 
 # Config defaults
 tuna.config.song.placeholder="No song playing"
