VLC Source: Add hotkeys to switch between vlc sources

--- a/data/locale/en-US.ini
+++ b/data/locale/en-US.ini
@@ -67,6 +67,9 @@ tuna.gui.vlc.remove.source="Remove selected source"
 tuna.gui.vlc.add="Add"
 tuna.gui.vlc.invalid="Source or scene are no longer valid!"
 tuna.gui.vlc.mapping.text="This lets you configure which vlc sources tuna should use in what scene. First select a scene and then the vlc source you want to use. You can use multiple sources per scene and reorder them in the list below. Tuna will always use the first one, but you can switch between them via hotkeys."
+tuna.hotkey.vlc.prev="Previous VLC source for tuna"
+tuna.hotkey.vlc.next="Next VLC source for tuna"
+
 # Config defaults
 tuna.config.song.placeholder="No song playing"
 tuna.config.song.format="%m - %t"
