IceCast: Add IceCast support

--- a/data/locale/en-US.ini
+++ b/data/locale/en-US.ini
@@ -33,6 +33,11 @@ tuna.gui.select.song.file="Select destination for song file"
 tuna.gui.select.cover.file="Select destination for cover file"
 tuna.gui.select.lyrics.file="Select destination for lyrics file"
 
+# icecast
+tuna.gui.tab.icecast="IceCast"
+tuna.gui.tab.icecast.url="IceCast server url"
+tuna.gui.tab.icecast.info="Make sure that the provided server offers song metadata under <url>/status-json.xsl"
+
 # lastfm tab
 tuna.gui.tab.lastfm="last.fm"
 tuna.gui.tab.lastfm.username="Username"
