--- a/data/locale/es-ES.ini
+++ b/data/locale/es-ES.ini
@@ -26,11 +26,17 @@ tuna.dock.label.song="Canción: "
 tuna.dock.menu.title="Contexto del control de música"
 tuna.dock.menu.toggle.volume="Control de volúmen"
 tuna.dock.menu.toggle.info="Info de la canción"
+tuna.dock.menu.toggle.source="Selección de fuente"
 
 # Misc
 tuna.gui.select.song.file="Seleccionar destino para el archivo de la canción"
 tuna.gui.select.cover.file="Seleccionar destino para el archivo de la portada"
 tuna.gui.select.lyrics.file="Seleccionar destino para el archivo de la letra"
+
+# icecast
+tuna.gui.tab.icecast="IceCast"
+tuna.gui.tab.icecast.url="Url del servidor IceCast"
+tuna.gui.tab.icecast.info="Asegúrese de que el servidor proporcionado ofrezca metadatos de canciones en <url>/status-json.xsl"
 
 # lastfm tab
 tuna.gui.tab.lastfm="last.fm"
@@ -59,8 +65,15 @@ tuna.gui.tab.vlc="VLC"
 tuna.gui.vlc.refresh="Actualizar"
 tuna.gui.vlc.source.name="Nombre de la fuente VLC"
 tuna.gui.issue.title="Tuna plugin"
-tuna.gui.vlc.issue.message="OBS parece haberse actualizado, lo que significa que el soporte de fuente VLC de Tuna podría potencialmente bloquearse hasta que se actualice Tuna. ¿Todavía quieres dejarlo habilitado?"
 tuna.gui.vlc.none="Ninguno"
+tuna.gui.vlc.source="Fuente"
+tuna.gui.vlc.scene="Escena"
+tuna.gui.vlc.remove.source="Eliminar fuente seleccionada"
+tuna.gui.vlc.add="Agregar"
+tuna.gui.vlc.invalid="¡La fuente o escena ya no es válida!"
+tuna.gui.vlc.mapping.text="Esto le permite configurar qué fuentes vlc debe usar tuna en qué escena. Primero seleccione una escena y luego la fuente vlc que desea usar. Puede utilizar varias fuentes por escena y reordenarlas en la lista a continuación. Tuna siempre usará la primera, pero puedes cambiar entre ellas a través de teclas de acceso rápido."
+tuna.hotkey.vlc.prev="Anterior fuente VLC para tuna"
+tuna.hotkey.vlc.next="Siguiente fuente VLC para tuna"
 
 # Config defaults
 tuna.config.song.placeholder="Sin canción en reproducción"
