Basics: Add option for downloading missing covers
this adds the interface elements for the option to download missing
covers from itunes if they are found in that database.

--- a/data/locale/de-DE.ini
+++ b/data/locale/de-DE.ini
@@ -98,6 +98,7 @@ tuna.gui.tab.basics.song.info="Pfad"
 tuna.gui.tab.basics.song.logmode="Logmodus"
 tuna.gui.tab.basics.song.cover="Titelbildpfad"
 tuna.gui.tab.basics.song.cover.enable="Lade Titelbild herunter"
+tuna.gui.tab.basics.song.cover.download.missing="Lade fehlende Titelbilder von itunes.apple.com"
 tuna.gui.tab.basics.song.lyrics="Songtextpfad"
 tuna.gui.tab.basics.song.format="Liedformatierung"
 tuna.gui.tab.basics.song.output.add="Neuer Eintrag"
