--- a/data/locale/en-US.ini
+++ b/data/locale/en-US.ini
@@ -112,6 +112,7 @@ tuna.gui.tab.basics.song.info="Song info path"
 tuna.gui.tab.basics.song.logmode="Log mode"
 tuna.gui.tab.basics.song.cover="Song cover path"
 tuna.gui.tab.basics.song.cover.enable="Try downloading cover"
+tuna.gui.tab.basics.song.cover.download.missing="Try fetching missing covers from itunes.apple.com"
 tuna.gui.tab.basics.song.lyrics="Song lyrics path"
 tuna.gui.tab.basics.song.format="Song format"
 tuna.gui.tab.basics.song.output.add="Add new"
