Update French translation

--- a/data/locale/fr-FR.ini
+++ b/data/locale/fr-FR.ini
@@ -26,11 +26,17 @@ tuna.dock.label.song="Musique : "
 tuna.dock.menu.title="Contexte de contrôle media"
 tuna.dock.menu.toggle.volume="Activer le contrôle du volume"
 tuna.dock.menu.toggle.info="Activer l'affichage musique en cours"
+tuna.dock.menu.toggle.source="Activer l'affichage de la sélection de source"
 
 # Misc
 tuna.gui.select.song.file="Sélectionner le fichier de destination pour la musique"
 tuna.gui.select.cover.file="Sélectionner le fichier de destination pour la couverture"
 tuna.gui.select.lyrics.file="Sélectionner le fichier de destination pour les paroles"
+
+# icecast
+tuna.gui.tab.icecast="IceCast"
+tuna.gui.tab.icecast.url="URL du serveur IceCast"
+tuna.gui.tab.icecast.info="Veuillez vérifier que le serveur founis les métadonnées dans <url>/status-json.xsl"
 
 # lastfm tab
 tuna.gui.tab.lastfm="last.fm"
@@ -58,9 +64,16 @@ tuna.gui.vlc.disabled="Le support de VLC est désactivé, soit parce qu'OBS a é
 tuna.gui.tab.vlc="VLC"
 tuna.gui.vlc.refresh="Rafraîchir"
 tuna.gui.vlc.source.name="Nom de la source VLC"
-tuna.gui.issue.title="Tuna plugin"
-tuna.gui.vlc.issue.message="OBS semble avoir été mis à jour, cela signifie que le support de la source VLC de Tuna peut potentiellement crasher jusqu'à une mise à jour de Tuna. Voulez-vous tout de même le laisser activé?"
+tuna.gui.issue.title="Plugin Tuna"
 tuna.gui.vlc.none="Aucun"
+tuna.gui.vlc.source="Source"
+tuna.gui.vlc.scene="Scène"
+tuna.gui.vlc.remove.source="Retirer la source sélectionnée"
+tuna.gui.vlc.add="Ajouter"
+tuna.gui.vlc.invalid="La source ou la scène n'est plus valide !"
+tuna.gui.vlc.mapping.text="Cela vous permet de configurer par scènes les sources VLC que Tuna doit utiliser. Sélectionnez une scène puis la source VLC que vous voulez utiliser. Vous pouvez utiliser plusieurs sources par scène et les ordonner dans la liste ci-dessous. Tuna utilisera toujours la première par défaut, mais vous pouvez changer ceci avec les raccourcis claviers."
+tuna.hotkey.vlc.prev="Source VLC précédente pour Tuna"
+tuna.hotkey.vlc.next="Source VLC suivante pour Tuna"
 
 # Config defaults
 tuna.config.song.placeholder="Aucune musique"
@@ -99,6 +112,8 @@ tuna.gui.tab.basics.song.info="Chemin de l'info"
 tuna.gui.tab.basics.song.logmode="Mode historique de tchat"
 tuna.gui.tab.basics.song.cover="Chemin vers la couverture"
 tuna.gui.tab.basics.song.cover.enable="Essayer de télécharger la couverture"
+tuna.gui.tab.basics.song.cover.download.missing="Rechercher les couvertures manquantes sur itunes.apple.com avec une taille"
+tuna.gui.tab.basics.song.cover.largest="La plus grande disponible"
 tuna.gui.tab.basics.song.lyrics="Chemin vers les paroles"
 tuna.gui.tab.basics.song.format="Format de la sortie"
 tuna.gui.tab.basics.song.output.add="Ajouter"
