Format: Add file path format option
Only works with MPD, VLC retrieves the URL, but that doesn't seem to be
the file path

Closes #162

--- a/data/locale/en-US.ini
+++ b/data/locale/en-US.ini
@@ -135,6 +135,7 @@ tuna.gui.tab.basics.format.album="Album"
 tuna.gui.tab.basics.format.time.progress="Song progress"
 tuna.gui.tab.basics.format.time.length="Song length"
 tuna.gui.tab.basics.format.space="Whitespace"
+tuna.gui.tab.basics.format.file_name="File name"
 tuna.gui.tab.basics.source="Song source"
 tuna.gui.tab.basics.status.stopped="Tuna is not running"
 tuna.gui.tab.basics.status.started="Tuna is running"
