--- a/data/locale/en-US.ini
+++ b/data/locale/en-US.ini
@@ -111,7 +111,7 @@ tuna.gui.tab.basics.song.output="Song info outputs"
 tuna.gui.tab.basics.song.info="Song info path"
 tuna.gui.tab.basics.song.logmode="Log mode"
 tuna.gui.tab.basics.song.cover="Song cover path"
-tuna.gui.tab.basics.song.cover.enable="Try downloading cover"
+tuna.gui.tab.basics.song.cover.enable="Fetch cover"
 tuna.gui.tab.basics.song.cover.download.missing="Search for missing covers on itunes.apple.com with size"
 tuna.gui.tab.basics.song.cover.largest="Largest available"
 tuna.gui.tab.basics.song.lyrics="Song lyrics path"
