--- a/data/locale/de-DE.ini
+++ b/data/locale/de-DE.ini
@@ -26,11 +26,17 @@ tuna.dock.label.song="Lied: "
 tuna.dock.menu.title="Musikbedienungsmenü"
 tuna.dock.menu.toggle.volume="Lautstärke ein/ausblenden"
 tuna.dock.menu.toggle.info="Liedname ein/ausblenden"
+tuna.dock.menu.toggle.source="Liedquelle ein/ausblenden"
 
 # Misc
 tuna.gui.select.song.file="Wähle einen Pfad für die Liedinformationen"
 tuna.gui.select.cover.file="Wähle einen Pfad für das Titelbild"
 tuna.gui.select.lyrics.file="Wähle einen Pfad für den Liedtext"
+
+# icecast
+tuna.gui.tab.icecast="IceCast"
+tuna.gui.tab.icecast.url="IceCast-Server url"
+tuna.gui.tab.icecast.info="Stellen Sie sicher, dass der Server Liedinformationen unter <url>/status-json.xsl zur Verfügung stellt"
 
 # lastfm tab
 tuna.gui.tab.lastfm="last.fm"
@@ -38,7 +44,7 @@ tuna.gui.tab.lastfm.username="Benutzername"
 tuna.gui.tab.lastfm.apikey="Benutzerdefinierter API Schlüssel"
 
 # Spotify tab
-tuna.gui.tab.spotify.info="Holt das momentan spielende Lied direkt über die Spotify API. Um dies zu ermöglichen musst Du dich über die Option unten bei Spotify einloggen. Nachdem Du den Zugriff gewährt hast bekommst Du einen Code, welchen Du in das untere Feld einfügen musst.\nManche Interaktionen, wie das Pausieren funktionieren nur für Premiumnutzer."
+tuna.gui.tab.spotify.info="Holt das momentan spielende Lied direkt über die Spotify API. Um dies zu ermöglichen müssen Sie sich über die Option unten bei Spotify einloggen. Nachdem Sie den Zugriff gewährt haben bekommen Sie einen Code, welchen SIe in das untere Feld einfügen müssen.\nManche Interaktionen, wie das Pausieren funktionieren nur für Premiumnutzer."
 tuna.gui.tab.spotify.login="Zum Spotifylogin"
 tuna.gui.tab.spotify.authcode="Authenifizierungscode"
 tuna.gui.tab.spotify.loggedin="Eingeloggt"
@@ -47,7 +53,7 @@ tuna.gui.tab.spotify.token="Token"
 tuna.gui.tab.spotify.refreshtoken="Token erneuern"
 tuna.gui.tab.spotify.requesttoken="Neues Token anfordern"
 tuna.gui.tab.spotify.performrefresh="Aktualisieren"
-tuna.gui.tab.spotify.linkmessage="Es wird gleich ein Browserfenster mit der offiziellen Loginseite von Spotify geöffnet über die Du den Zugriff gewärleisten musst. Stelle sicher, dass es sich wirklich um die richtige Seite handelt, bevor Du dich einloggst!"
+tuna.gui.tab.spotify.linkmessage="Es wird gleich ein Browserfenster mit der offiziellen Ameldeseite von Spotify geöffnet über die Sie den Zugriff gewärleisten müssen. Stellen Sie sicher, dass es sich wirklich um die richtige Seite handelt, bevor Sie sich anmelden!"
 tuna.gui.tab.spotify.label.log="Antwortlog"
 tuna.gui.tab.spotify.enablelog="Log anschalten"
 tuna.gui.tab.spotify.client_id="Spotify client ID"
@@ -58,8 +64,16 @@ tuna.gui.vlc.disabled="VLC Integration ist ausgeschaltet, weil VLC nicht install
 tuna.gui.tab.vlc="VLC"
 tuna.gui.vlc.refresh="Aktualisieren"
 tuna.gui.vlc.source.name="VLC Quellenname"
-tuna.gui.issue.title="Tunaplugin"
+tuna.gui.issue.title="Tuna-Plugin"
 tuna.gui.vlc.none="Keine"
+tuna.gui.vlc.source="Quelle"
+tuna.gui.vlc.scene="Szene"
+tuna.gui.vlc.remove.source="Entferne ausgewählte Qulle"
+tuna.gui.vlc.add="Hinzufügen"
+tuna.gui.vlc.invalid="Quelle oder Szene ist nicht mehr valide!"
+tuna.gui.vls.mapping.text="Hier können Sie einstellen welche VLC-Quellen Tuna in welchen Szenen verwenden soll. Wählen Sie zuerst eine Szene aus und dann die VLC-Quelle die Sie verwnden wollen. Sie können mehrere VLC-Quellen pro Szene verwenden und in der Liste anordnen. Tuna verwendet immer die erste Quelle in der Liste, aber sie können mit Tastaturkürzeln zur nächsten oder vorigen wechseln."
+tuna.hotkey.vlc.prev="Vorige VLC-Quelle für Tuna"
+tuna.hotkey.vlc.next="Nächste VLC-Quelle für Tuna"
 
 # Config defaults
 tuna.config.song.placeholder="Keine Wiedergabe"
@@ -99,6 +113,7 @@ tuna.gui.tab.basics.song.logmode="Logmodus"
 tuna.gui.tab.basics.song.cover="Titelbildpfad"
 tuna.gui.tab.basics.song.cover.enable="Lade Titelbild herunter"
 tuna.gui.tab.basics.song.cover.download.missing="Lade fehlende Titelbilder von itunes.apple.com"
+tuna.gui.tab.basics.song.cover.largest="Größtes"
 tuna.gui.tab.basics.song.lyrics="Songtextpfad"
 tuna.gui.tab.basics.song.format="Liedformatierung"
 tuna.gui.tab.basics.song.output.add="Neuer Eintrag"
@@ -106,7 +121,7 @@ tuna.gui.tab.basics.song.output.remove="Lösche ausgewählten Eintrag"
 tuna.gui.tab.basics.song.output.edit="Bearbeite ausgewählten Eintrag"
 tuna.gui.tab.basics.song.placeholder="Platzhalter"
 tuna.gui.tab.basics.song.placeholder.hint="Verwende %s für Leerzeichen am Ende oder Anfang"
-tuna.gui.tab.basics.format.info="Denke daran, dass manche Musikquellen nicht alle Optionen unterstützen\nGroßbuchstaben (z.B. %T) sorgen dafür, dass die Ausgabe großgeschrieben wird\nDas Anhängen von [<n>] schneidet die Ausgabe nach <n> Zeichen ab"
+tuna.gui.tab.basics.format.info="Denke daran, dass manche Musikquellen nicht alle Optionen unterstützen\nGroßbuchstaben (z.B. {TITLE}) sorgen dafür, dass die Ausgabe großgeschrieben wird\nDas Anhängen von :<n> schneidet die Ausgabe nach <n> Zeichen ab (z.B. {TITLE:10})."
 tuna.gui.tab.basics.format.title="Titel"
 tuna.gui.tab.basics.format.artist="Künstler"
 tuna.gui.tab.basics.format.date.full="Volles Erscheinungsdatum"
@@ -120,6 +135,7 @@ tuna.gui.tab.basics.format.album="Album"
 tuna.gui.tab.basics.format.time.progress="Fortschritt"
 tuna.gui.tab.basics.format.time.length="Länge"
 tuna.gui.tab.basics.format.space="Leerzeichen"
+tuna.gui.tab.basics.format.file_name="Dateiname"
 tuna.gui.tab.basics.source="Musikquelle"
 tuna.gui.tab.basics.status.stopped="Tuna läuft nicht"
 tuna.gui.tab.basics.status.started="Tuna läuft"
@@ -127,3 +143,4 @@ tuna.gui.tab.basics.refreshrate="Aktualisierungsrate"
 tuna.gui.tab.basics.start="Start"
 tuna.gui.tab.basics.stop="Stopp"
 tuna.gui.tab.basics.host.server="Sende/Empfange Informationen durch lokalen Server auf Port: "
+tuna.gui.tab.basics.removeextensions="Entferne Dateiendungen vom Titel"
