--- a/data/locale/en-US.ini
+++ b/data/locale/en-US.ini
@@ -121,7 +121,7 @@ tuna.gui.tab.basics.song.output.remove="Remove selected"
 tuna.gui.tab.basics.song.output.edit="Edit selected"
 tuna.gui.tab.basics.song.placeholder="Song placeholder"
 tuna.gui.tab.basics.song.placeholder.hint="Use %s for leading/trailing spaces, %e for linebreaks"
-tuna.gui.tab.basics.format.info="Keep in mind that some sources do not support all format options\nUsing uppercase letter (e.g. %T) will convert all characters to uppercase\nAppending [<n>] will limit the option to <n> characters"
+tuna.gui.tab.basics.format.info="Keep in mind that some sources do not support all format options\nUsing uppercase letter (e.g. {TITLE}) will convert all characters to uppercase\nAppending :<n> will limit the option to <n> characters (e.g. {TITLE:10})"
 tuna.gui.tab.basics.format.title="Title"
 tuna.gui.tab.basics.format.artist="Artist"
 tuna.gui.tab.basics.format.date.full="Full release date"
@@ -142,7 +142,23 @@ tuna.gui.tab.basics.status.started="Tuna is running"
 tuna.gui.tab.basics.refreshrate="Refresh rate"
 tuna.gui.tab.basics.start="Start"
 tuna.gui.tab.basics.stop="Stop"
-tuna.gui.tab.basics.notrunning="Preview: Plugin is not running"
-tuna.gui.tab.basics.preview="Preview: "
 tuna.gui.tab.basics.host.server="Host/receive information on local webserver with port: "
 tuna.gui.tab.basics.removeextensions="Remove file extensions from title"
+
+# format
+tuna.format.title="Title"
+tuna.format.album="Album"
+tuna.format.release_date="Full release date"
+tuna.format.release_year="Release year"
+tuna.format.release_month="Release month"
+tuna.format.release_day="Release day"
+tuna.format.label="Label"
+tuna.format.file_name="File name"
+tuna.format.first_artist="First artist"
+tuna.format.artists="All artists"
+tuna.format.track_number="Track number"
+tuna.format.disc_number="Disc number"
+tuna.format.progress="Song progress"
+tuna.format.duration="Song duration"
+tuna.format.time_left="Song time left"
+tuna.format.line_break="Line break"
