Formatting: Use JSON object to store metadata
Closes #175

--- a/data/locale/de-DE.ini
+++ b/data/locale/de-DE.ini
@@ -121,21 +121,7 @@ tuna.gui.tab.basics.song.output.remove="Lösche ausgewählten Eintrag"
 tuna.gui.tab.basics.song.output.edit="Bearbeite ausgewählten Eintrag"
 tuna.gui.tab.basics.song.placeholder="Platzhalter"
 tuna.gui.tab.basics.song.placeholder.hint="Verwende %s für Leerzeichen am Ende oder Anfang"
-tuna.gui.tab.basics.format.info="Denke daran, dass manche Musikquellen nicht alle Optionen unterstützen\nGroßbuchstaben (z.B. {TITLE}) sorgen dafür, dass die Ausgabe großgeschrieben wird\nDas Anhängen von :<n> schneidet die Ausgabe nach <n> Zeichen ab (z.B. {TITLE:10})."
-tuna.gui.tab.basics.format.title="Titel"
-tuna.gui.tab.basics.format.artist="Künstler"
-tuna.gui.tab.basics.format.date.full="Volles Erscheinungsdatum"
-tuna.gui.tab.basics.format.number="Titelnummer"
-tuna.gui.tab.basics.format.date.year="Erscheinungsjahr"
-tuna.gui.tab.basics.format.label="Label"
-tuna.gui.tab.basics.format.time.left="Übrige Zeit"
-tuna.gui.tab.basics.format.linebreak="Zeilenumbruch"
-tuna.gui.tab.basics.format.disc.number="CD Nummer"
-tuna.gui.tab.basics.format.album="Album"
-tuna.gui.tab.basics.format.time.progress="Fortschritt"
-tuna.gui.tab.basics.format.time.length="Länge"
-tuna.gui.tab.basics.format.space="Leerzeichen"
-tuna.gui.tab.basics.format.file_name="Dateiname"
+tuna.gui.tab.basics.format.info="Denken Sie daran, dass manche Musikquellen nicht alle Optionen unterstützen\nGroßbuchstaben (z.B. {TITLE}) sorgen dafür, dass die Ausgabe großgeschrieben wird\nDas Anhängen von :<n> schneidet die Ausgabe nach <n> Zeichen ab (z.B. {TITLE:10})."
 tuna.gui.tab.basics.source="Musikquelle"
 tuna.gui.tab.basics.status.stopped="Tuna läuft nicht"
 tuna.gui.tab.basics.status.started="Tuna läuft"
@@ -144,3 +130,23 @@ tuna.gui.tab.basics.start="Start"
 tuna.gui.tab.basics.stop="Stopp"
 tuna.gui.tab.basics.host.server="Sende/Empfange Informationen durch lokalen Server auf Port: "
 tuna.gui.tab.basics.removeextensions="Entferne Dateiendungen vom Titel"
+
+
+tuna.format.title="Titel"
+tuna.format.album="Album"
+tuna.format.release_date="Volles Erscheinungsdatum"
+tuna.format.release_year="Erscheinungsjahr"
+tuna.format.release_month="Erscheinungsmonat"
+tuna.format.release_day="Erscheinungstag"
+tuna.format.label="Label"
+tuna.format.file_name="Dateiname"
+tuna.format.first_artist="Erster künstler"
+tuna.format.artists="Alle Künstler"
+tuna.format.track_number="Titelnummer"
+tuna.format.disc_number="CD Nummer"
+tuna.format.progress="Fortschritt"
+tuna.format.duration="Länge"
+tuna.format.time_left="Übrige Zeit"
+tuna.format.linebreak="Zeilenumbruch"
+tuna.format.json_compact="Kompaktes JSON"
+tuna.format.json_formatted="Formatiertes JSON"
