--- a/data/locale/en-US.ini
+++ b/data/locale/en-US.ini
@@ -122,20 +122,6 @@ tuna.gui.tab.basics.song.output.edit="Edit selected"
 tuna.gui.tab.basics.song.placeholder="Song placeholder"
 tuna.gui.tab.basics.song.placeholder.hint="Use %s for leading/trailing spaces, %e for linebreaks"
 tuna.gui.tab.basics.format.info="Keep in mind that some sources do not support all format options\nUsing uppercase letter (e.g. {TITLE}) will convert all characters to uppercase\nAppending :<n> will limit the option to <n> characters (e.g. {TITLE:10})"
-tuna.gui.tab.basics.format.title="Title"
-tuna.gui.tab.basics.format.artist="Artist"
-tuna.gui.tab.basics.format.date.full="Full release date"
-tuna.gui.tab.basics.format.number="Track number"
-tuna.gui.tab.basics.format.date.year="Release year"
-tuna.gui.tab.basics.format.label="Song label"
-tuna.gui.tab.basics.format.time.left="Time left"
-tuna.gui.tab.basics.format.linebreak="Linebreak"
-tuna.gui.tab.basics.format.disc.number="Disc number"
-tuna.gui.tab.basics.format.album="Album"
-tuna.gui.tab.basics.format.time.progress="Song progress"
-tuna.gui.tab.basics.format.time.length="Song length"
-tuna.gui.tab.basics.format.space="Whitespace"
-tuna.gui.tab.basics.format.file_name="File name"
 tuna.gui.tab.basics.source="Song source"
 tuna.gui.tab.basics.status.stopped="Tuna is not running"
 tuna.gui.tab.basics.status.started="Tuna is running"
@@ -162,3 +148,5 @@ tuna.format.progress="Song progress"
 tuna.format.duration="Song duration"
 tuna.format.time_left="Song time left"
 tuna.format.line_break="Line break"
+tuna.format.json_compact="Compact song JSON"
+tuna.format.json_formatted="Fromatted song JSON"
