VLC Source: Add extra options and fix some data type issues

--- a/data/locale/de-DE.ini
+++ b/data/locale/de-DE.ini
@@ -150,3 +150,21 @@ tuna.format.time_left="Übrige Zeit"
 tuna.format.linebreak="Zeilenumbruch"
 tuna.format.json_compact="Kompaktes JSON"
 tuna.format.json_formatted="Formatiertes JSON"
+
+tuna.format.genre="Genre"
+tuna.format.description="Beschreibung"
+tuna.format.setting="Schauplatz"
+tuna.format.now_playing="Now Playing"
+tuna.format.track_id="Lied ID"
+tuna.format.season="Staffel"
+tuna.format.show_name="Serienname"
+tuna.format.album_artist="Albumkünstler"
+tuna.format.copyright="Urheberrecht"
+tuna.format.rating="Bewertung"
+tuna.format.language="Sprache"
+tuna.format.encoded_by="Enkodiert von"
+tuna.format.director="Regessieur"
+tuna.format.episode="Folge"
+tuna.format.actors="Schauspieler"
+tuna.format.disc_total="CD-Anzahl"
+tuna.format.track_total="Liedanzahl"
