--- a/data/locale/en-US.ini
+++ b/data/locale/en-US.ini
@@ -150,3 +150,21 @@ tuna.format.time_left="Song time left"
 tuna.format.line_break="Line break"
 tuna.format.json_compact="Compact song JSON"
 tuna.format.json_formatted="Fromatted song JSON"
+
+tuna.format.genre="Genre"
+tuna.format.description="Description"
+tuna.format.setting="Setting"
+tuna.format.now_playing="Now playing"
+tuna.format.track_id="Track ID"
+tuna.format.season="Season"
+tuna.format.show_name="Show name"
+tuna.format.album_artist="Album artist"
+tuna.format.copyright="Copyright"
+tuna.format.rating="Rating"
+tuna.format.language="Language"
+tuna.format.encoded_by="Encoded by"
+tuna.format.director="Director"
+tuna.format.episode="Episode"
+tuna.format.actors="Actors"
+tuna.format.disc_total="Disc total"
+tuna.format.track_total="Track total"
