UI: Add info for old formatting options
Now warns the user if he's using the old options like %t etc.
Closes #185

--- a/data/locale/de-DE.ini
+++ b/data/locale/de-DE.ini
@@ -102,9 +102,10 @@ tuna.gui.tab.windowtitle.use.title="Verwende Fenstertitel"
 # Edit output dialog
 tuna.gui.output.edit.dialog.title="Ausgabeneditor"
 tuna.gui.output.edit.dialog.error.title="Ausgabefehler"
-tuna.gui.output.edit.dialog.error="Die angegebenen Angaben sind inkorrekt. Stelle sicher, dass das Format nicht leer ist und der Pfad stimmt."
+tuna.gui.output.edit.dialog.error="Die angegebenen Angaben sind inkorrekt. Stellen Sie sicher, dass das Format nicht leer ist und der Pfad stimmt."
 tuna.gui.output.edit.dialog.logmode="Hänge Text als neue Zeile an"
 tuna.gui.output.edit.dialog.format.error="Die ausgewählte Musikquelle unterstützt eine oder mehrere der verwendeten Optionen nicht!"
+tuna.gui.output.edit.dialog.format.old="Das neue format system verwendet nicht mehr %t etc., sondern {title}, {artist} etc."
 
 # Basic tab
 tuna.gui.tab.basics.song.output="Liedinfo"
