--- a/data/locale/en-US.ini
+++ b/data/locale/en-US.ini
@@ -105,6 +105,9 @@ tuna.gui.output.edit.dialog.error.title="Output error"
 tuna.gui.output.edit.dialog.error="The provided data is incorrect. Make sure the format isn't empty and the path is valid"
 tuna.gui.output.edit.dialog.logmode="Chat log mode"
 tuna.gui.output.edit.dialog.format.error="The selected music source does not support one or more of the used format options!"
+tuna.gui.output.edit.dialog.format.old="The new format system does not use %t etc. anymore. Use {title}, {artist} etc. instead"
+tuna.gui.tab.output.edit.dialog.format="Variable"
+tuna.gui.tab.output.edit.dialog.value="Value"
 
 # Basic tab
 tuna.gui.tab.basics.song.output="Song info outputs"
