Locale: Update German translation

--- a/data/locale/de-DE.ini
+++ b/data/locale/de-DE.ini
@@ -106,6 +106,8 @@ tuna.gui.output.edit.dialog.error="Die angegebenen Angaben sind inkorrekt. Stell
 tuna.gui.output.edit.dialog.logmode="Hänge Text als neue Zeile an"
 tuna.gui.output.edit.dialog.format.error="Die ausgewählte Musikquelle unterstützt eine oder mehrere der verwendeten Optionen nicht!"
 tuna.gui.output.edit.dialog.format.old="Das neue format system verwendet nicht mehr %t etc., sondern {title}, {artist} etc."
+tuna.gui.tab.output.edit.dialog.format="Variable"
+tuna.gui.tab.output.edit.dialog.value="Wert"
 
 # Basic tab
 tuna.gui.tab.basics.song.output="Liedinfo"
