Spotify: Add support for URL

--- a/data/locale/de-DE.ini
+++ b/data/locale/de-DE.ini
@@ -171,3 +171,4 @@ tuna.format.episode="Folge"
 tuna.format.actors="Schauspieler"
 tuna.format.disc_total="CD-Anzahl"
 tuna.format.track_total="Liedanzahl"
+tuna.format.url="Lied URL"
