--- a/data/locale/en-US.ini
+++ b/data/locale/en-US.ini
@@ -171,3 +171,4 @@ tuna.format.episode="Episode"
 tuna.format.actors="Actors"
 tuna.format.disc_total="Disc total"
 tuna.format.track_total="Track total"
+tuna.format.url="Song URL"
