MPRIS: Add MPRIS support
Taken from https://github.com/rmoalic/obs_media_info_plugin

--- a/data/locale/de-DE.ini
+++ b/data/locale/de-DE.ini
@@ -33,6 +33,9 @@ tuna.gui.select.song.file="Wähle einen Pfad für die Liedinformationen"
 tuna.gui.select.cover.file="Wähle einen Pfad für das Titelbild"
 tuna.gui.select.lyrics.file="Wähle einen Pfad für den Liedtext"
 
+# MPRIS
+tuna.gui.tab.mpris.playerlist="Ausgewählte Wiedergabeanwendung:"
+
 # icecast
 tuna.gui.tab.icecast="IceCast"
 tuna.gui.tab.icecast.url="IceCast-Server url"
@@ -58,6 +61,7 @@ tuna.gui.tab.spotify.label.log="Antwortlog"
 tuna.gui.tab.spotify.enablelog="Log anschalten"
 tuna.gui.tab.spotify.client_id="Spotify client ID"
 tuna.gui.tab.spotify.client_secret="Spotify client secret"
+
 
 # vlc
 tuna.gui.vlc.disabled="VLC Integration ist ausgeschaltet, weil VLC nicht installiert ist."
