--- a/data/locale/en-US.ini
+++ b/data/locale/en-US.ini
@@ -32,6 +32,11 @@ tuna.dock.menu.toggle.source="Toggle source selection"
 tuna.gui.select.song.file="Select destination for song file"
 tuna.gui.select.cover.file="Select destination for cover file"
 tuna.gui.select.lyrics.file="Select destination for lyrics file"
+tuna.gui.tab.wmc="Windows Media Control"
+
+# MPRIS
+tuna.gui.tab.mpris="MPRIS"
+tuna.gui.tab.mpris.playerlist="Selected media player:"
 
 # icecast
 tuna.gui.tab.icecast="IceCast"
