WMC: Add Windows Media Control source

--- a/data/locale/en-US.ini
+++ b/data/locale/en-US.ini
@@ -10,6 +10,7 @@ tuna.gui.tab.window_title="Window Title"
 tuna.gui.tab.about="About"
 tuna.gui.tab.gpmdp="Google Play Music Desktop Player"
 tuna.gui.tab.web="Web browser"
+tuna.gui.tab.wmc="Windows Media Control"
 
 # Source
 tuna.source.progress.color.fg="Foreground color"
@@ -37,6 +38,9 @@ tuna.gui.tab.wmc="Windows Media Control"
 # MPRIS
 tuna.gui.tab.mpris="MPRIS"
 tuna.gui.tab.mpris.playerlist="Selected media player:"
+
+# WMC
+tuna.gui.tab.wmc.playerlist="Selected media player:"
 
 # icecast
 tuna.gui.tab.icecast="IceCast"
