Format: Add option to output date and time when a song started playing
Closes #198

--- a/data/locale/de-DE.ini
+++ b/data/locale/de-DE.ini
@@ -176,3 +176,6 @@ tuna.format.actors="Schauspieler"
 tuna.format.disc_total="CD-Anzahl"
 tuna.format.track_total="Liedanzahl"
 tuna.format.url="Lied URL"
+
+tuna.format.date="Datum an dem das Lied spielte"
+tuna.format.time="Uhrzeit an dem das Lied spielte"
