--- a/data/locale/en-US.ini
+++ b/data/locale/en-US.ini
@@ -181,3 +181,6 @@ tuna.format.actors="Actors"
 tuna.format.disc_total="Disc total"
 tuna.format.track_total="Track total"
 tuna.format.url="Song URL"
+
+tuna.format.date="Date when song started"
+tuna.format.time="Time when song started"
