Spotify: Add option to retrieve playlist title
Closes #209

--- a/data/locale/de-DE.ini
+++ b/data/locale/de-DE.ini
@@ -176,6 +176,9 @@ tuna.format.actors="Schauspieler"
 tuna.format.disc_total="CD-Anzahl"
 tuna.format.track_total="Liedanzahl"
 tuna.format.url="Lied URL"
+tuna.format.playlist_name="Wiedergabeliste"
+tuna.format.playlist_url="Wiedergabeliste URL"
 
 tuna.format.date="Datum an dem das Lied spielte"
 tuna.format.time="Uhrzeit an dem das Lied spielte"
+
