Update zh-CN  using zh-TW, minor fixes.
zh-CN seems out of date, might as way update it :) .
Both zh-CN and zh-TW should be aligned with newest version now.

--- a/data/locale/zh-CN.ini
+++ b/data/locale/zh-CN.ini
@@ -10,6 +10,7 @@ tuna.gui.tab.window_title="窗口标题"
 tuna.gui.tab.about="关于"
 tuna.gui.tab.gpmdp="Google桌面音乐播放器"
 tuna.gui.tab.web="网络浏览器"
+tuna.gui.tab.wmc="Windows Media Control"
 
 # Source
 tuna.source.progress.color.fg="前景颜色"
@@ -32,6 +33,14 @@ tuna.dock.menu.toggle.source="切换来源选择"
 tuna.gui.select.song.file="请选择歌曲文件"
 tuna.gui.select.cover.file="请选择封面文件"
 tuna.gui.select.lyrics.file="请选择歌词文件"
+tuna.gui.tab.wmc="Windows Media Control"
+
+# MPRIS
+tuna.gui.tab.mpris="MPRIS"
+tuna.gui.tab.mpris.playerlist="已选择的媒体播放器:"
+
+# WMC
+tuna.gui.tab.wmc.playerlist="已选择的媒体播放器:"
 
 # icecast
 tuna.gui.tab.icecast="IceCast"
@@ -105,13 +114,19 @@ tuna.gui.output.edit.dialog.error.title="输出错误"
 tuna.gui.output.edit.dialog.error="所提供的数据有误，请确认该格式不为空并且路径有效"
 tuna.gui.output.edit.dialog.logmode="日志记录模式"
 tuna.gui.output.edit.dialog.format.error="所选音频源不支持当前使用的格式选项！"
+tuna.gui.output.edit.dialog.format.old="新的格式系统不再使用 %t 等代号。请改用 {title}, {artist} 等格式。"
+tuna.gui.tab.output.edit.dialog.format="变数"
+tuna.gui.tab.output.edit.dialog.value="值"
 
 # Basic tab
 tuna.gui.tab.basics.song.output="歌曲信息输出"
 tuna.gui.tab.basics.song.info="歌曲信息路径"
 tuna.gui.tab.basics.song.logmode="日志模式"
 tuna.gui.tab.basics.song.cover="歌曲封面路径"
+tuna.gui.tab.basics.song.lyrics.enable="尝试下载歌词"
 tuna.gui.tab.basics.song.cover.enable="尝试下载歌曲封面"
+tuna.gui.tab.basics.song.cover.download.missing="在 itunes.apple.com 搜索遗失的封面。大小"
+tuna.gui.tab.basics.song.cover.largest="最大可用"
 tuna.gui.tab.basics.song.lyrics="歌词路径"
 tuna.gui.tab.basics.song.format="歌曲格式"
 tuna.gui.tab.basics.song.output.add="添加新规则"
@@ -120,26 +135,55 @@ tuna.gui.tab.basics.song.output.edit="编辑所选规则"
 tuna.gui.tab.basics.song.placeholder="歌曲挂起时占位内容"
 tuna.gui.tab.basics.song.placeholder.hint="使用%s作为前后空白占位符，使用%e作为换行符"
 tuna.gui.tab.basics.format.info="请谨记有些远不支持某些格式选项\n使用大写字母(e.g. %T)将会把全部字母转换为大写\n添加[<n>]会将选项限制在<n>个字符下"
-tuna.gui.tab.basics.format.title="标题"
-tuna.gui.tab.basics.format.artist="艺术家"
-tuna.gui.tab.basics.format.date.full="正式发行日期"
-tuna.gui.tab.basics.format.number="音轨编号"
-tuna.gui.tab.basics.format.date.year="发行年"
-tuna.gui.tab.basics.format.label="歌曲标签"
-tuna.gui.tab.basics.format.time.left="剩余时间"
-tuna.gui.tab.basics.format.linebreak="换行符"
-tuna.gui.tab.basics.format.disc.number="光盘编号"
-tuna.gui.tab.basics.format.album="专辑"
-tuna.gui.tab.basics.format.time.progress="歌曲进度"
-tuna.gui.tab.basics.format.time.length="歌曲长度"
-tuna.gui.tab.basics.format.space="空白"
 tuna.gui.tab.basics.source="歌曲源"
 tuna.gui.tab.basics.status.stopped="Tuna已停止"
 tuna.gui.tab.basics.status.started="Tuna正在运行"
 tuna.gui.tab.basics.refreshrate="刷新频率"
 tuna.gui.tab.basics.start="开始"
 tuna.gui.tab.basics.stop="停止"
-tuna.gui.tab.basics.notrunning="预览：插件并未运行"
-tuna.gui.tab.basics.preview="预览："
 tuna.gui.tab.basics.host.server="本地收发信息服务器端口："
 tuna.gui.tab.basics.removeextensions="从标题中移除文件扩展"
+
+# format
+tuna.format.title="标题"
+tuna.format.album="专辑"
+tuna.format.release_date="正式发行日期"
+tuna.format.release_year="发行年份"
+tuna.format.release_month="发行月份"
+tuna.format.release_day="发行日"
+tuna.format.label="歌曲标籤"
+tuna.format.file_name="档案名称"
+tuna.format.first_artist="首位艺术家"
+tuna.format.artists="所有艺术家"
+tuna.format.track_number="音轨编号"
+tuna.format.disc_number="光盘编号"
+tuna.format.progress="歌曲进度"
+tuna.format.duration="歌曲长度"
+tuna.format.time_left="剩馀时间"
+tuna.format.line_break="换行符"
+tuna.format.json_compact="压缩的歌曲 JSON"
+tuna.format.json_formatted="格式化的歌曲 JSON"
+
+tuna.format.genre="曲风"
+tuna.format.description="叙述"
+tuna.format.setting="场景"
+tuna.format.now_playing="正在播放"
+tuna.format.track_id="音轨ID"
+tuna.format.season="季"
+tuna.format.show_name="节目名称"
+tuna.format.album_artist="专辑艺术家"
+tuna.format.copyright="版权"
+tuna.format.rating="评级"
+tuna.format.language="语言"
+tuna.format.encoded_by="编码由"
+tuna.format.director="製作总监"
+tuna.format.episode="集数"
+tuna.format.actors="演员"
+tuna.format.disc_total="光盘总数"
+tuna.format.track_total="音轨总数"
+tuna.format.url="歌曲 URL"
+tuna.format.playlist_name="播放清单"
+tuna.format.playlist_url="播放清单 URL"
+
+tuna.format.date="歌曲开始日期"
+tuna.format.time="歌曲开始时间"
