--- a/data/locale/zh-TW.ini
+++ b/data/locale/zh-TW.ini
@@ -160,7 +160,7 @@ tuna.format.disc_number="光碟編號"
 tuna.format.progress="歌曲進度"
 tuna.format.duration="歌曲長度"
 tuna.format.time_left="歌曲剩餘時間"
-tuna.format.line_break="換行"
+tuna.format.line_break="換行符號"
 tuna.format.json_compact="壓縮的歌曲 JSON"
 tuna.format.json_formatted="格式化的歌曲 JSON"
 
