Spotify: Add option to increase cURL request timeout
Longer timeouts can stall the UI though, so it's not really advised to
increase the timeout, but rather find the reason why requests are
taking so long.

--- a/data/locale/de-DE.ini
+++ b/data/locale/de-DE.ini
@@ -61,7 +61,7 @@ tuna.gui.tab.spotify.label.log="Antwortlog"
 tuna.gui.tab.spotify.enablelog="Log anschalten"
 tuna.gui.tab.spotify.client_id="Spotify client ID"
 tuna.gui.tab.spotify.client_secret="Spotify client secret"
-
+tuna.gui.tab.spotify.timeout="Maximale Serverabfragendauer"
 
 # vlc
 tuna.gui.vlc.disabled="VLC Integration ist ausgeschaltet, weil VLC nicht installiert ist."
