--- a/data/locale/en-US.ini
+++ b/data/locale/en-US.ini
@@ -67,6 +67,7 @@ tuna.gui.tab.spotify.label.log="Response log"
 tuna.gui.tab.spotify.enablelog="Enable log"
 tuna.gui.tab.spotify.client_id="Spotify client ID"
 tuna.gui.tab.spotify.client_secret="Spotify client secret"
+tuna.gui.tab.spotify.timeout="Request timeout"
 
 # vlc
 tuna.gui.vlc.disabled="VLC support is disabled, either because OBS updated and it was disabled by the user, or because VLC isn't installed"
