--- a/data/locale/ru-RU.ini
+++ b/data/locale/ru-RU.ini
@@ -37,7 +37,7 @@ tuna.gui.tab.lastfm.username="Имя пользователя"
 tuna.gui.tab.lastfm.apikey="Пользовательский ключ API"
 
 # Spotify tab
-tuna.gui.tab.spotify.info="Захватывает воспроизводимую в данный момент песню напрямую через Spotify API.  Чтобы включить это, вам необходимо войти в Spotify по ссылке ниже.  После предоставления доступа вы получите код входа в систему, который необходимо вставить в текстовое поле ниже. \ NПомните, что некоторые взаимодействия API, такие как приостановка, могут использоваться только премиум-пользователями."
+tuna.gui.tab.spotify.info="Захватывает воспроизводимую в данный момент песню напрямую через API Spotify.  Чтобы включить это, вам необходимо войти в Spotify по ссылке ниже.  После предоставления доступа вы получите код входа в систему, который необходимо вставить в текстовое поле ниже.\nПомните, что некоторые взаимодействия API, такие как приостановка, могут использоваться только премиум-пользователями."
 tuna.gui.tab.spotify.login="Открыть страницу входа"
 tuna.gui.tab.spotify.authcode="Код аутентификации"
 tuna.gui.tab.spotify.loggedin="Авторизован"
